# Competitive

./: Cargo.toml  README.md  pyproject.toml
src/: main.py  main.rs
src/first_try/: first_try.rs  mod.rs  test_first_try.py  test_first_try.rs
src/first_try_dir/: first_try.py  first_try.rs  mod.rs  test_first_try.py  test_first_try.rs
