[package]
name = "competitive"
version = "0.1.0"
description = "Python competetive"
authors = ["Krystian Krakowski <kkrakowski22@gmail.com>"]
readme = "README.md"
rust-version = "1.81.0"
edition = "2021"

[dependencies]
fmt = "0.1.0"

[build-dependencies]
cargo-check = { version = "*", optional = true }
clippy = { version = "*", optional = true }
